# NDKCMakeDe-mo

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ndkcmakedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jnitest1.c  jnitest1.h  jnitest3.c  native-lib.cpp
app/src/main/cpp/appGlueTest/: appgluetest.cpp
app/src/main/cpp/hFileTest/: jniTest2.c  jniTest2.h
app/src/main/gmath/: CMakeLists.txt  gmath.c
app/src/main/gmath/outputs/: cmake_install.cmake
app/src/main/gmath/outputs/armeabi-v7a/: cmake_install.cmake
app/src/main/gmath/outputs/x86/: cmake_install.cmake
app/src/main/gmath/outputs/x86_64/: cmake_install.cmake
app/src/main/importTest/: importtest.c  importtest.h
app/src/main/java/com/example/ndkcmakedemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ndkcmakedemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
